--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -14,8 +14,6 @@
 </head>
 
 <body>
-
-    <div class="">
         <!-- Comienzo del panel de acceso a meetlanguages, contiene panel de registro y login -->
         <div class="access">
             <div class="text-center title">
@@ -23,47 +21,49 @@
             </div>
             <div class="accessForm col-sm-offset-2 col-sm-8">
                 <div class="col-sm-7">
-                    <h2>Register</h2>
-                    <form class="form-horizontal">
+                    <div class="text-center">
+                        <h2>Register</h2>
+                    </div>
+                    <form class="form-horizontal" action="myprofile.html">
                         <div class="form-group">
-                            <label class="control-label col-sm-4" for="name">Name:</label>
+                            <label class="control-label col-sm-5" for="name">Name:</label>
                             <div class="col-sm-6">
                                 <input type="text" class="form-control" id="name" placeholder="Enter name">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-4" for="native">Native language:</label>
+                            <label class="control-label col-sm-5" for="native">Native language:</label>
                             <div class="col-sm-6">
                                 <input type="text" class="form-control" id="native" placeholder="Enter native language">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-4" for="learn">Language I want to learn:</label>
+                            <label class="control-label col-sm-5" for="learn">Language I want to learn:</label>
                             <div class="col-sm-6">
                                 <input type="text" class="form-control" id="learn" placeholder="Enter language to learn">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-4" for="email">Email:</label>
+                            <label class="control-label col-sm-5" for="email">Email:</label>
                             <div class="col-sm-6">
                                 <input type="email" class="form-control" id="email" placeholder="Enter email">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-4" for="pwd">Password:</label>
+                            <label class="control-label col-sm-5" for="pwd">Password:</label>
                             <div class="col-sm-6">
                                 <input type="password" class="form-control" id="pwd" placeholder="Enter password">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-4 col-sm-10">
+                        <div class="form-group text-right  ">
+                            <div class="col-sm-offset-1 col-sm-10">
                                 <div class="checkbox">
                                     <label><input type="checkbox"> Remember me</label>
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-4 col-sm-10">
+                        <div class="form-group text-right">
+                            <div class="col-sm-offset-1  col-sm-10">
                                 <button type="submit" class="btn btn-default">Submit</button>
                             </div>
                         </div>
@@ -71,8 +71,10 @@
                 </div>
 
                 <div class="col-sm-5">
-                    <h2>Login</h2>
-                    <form class="form-horizontal">
+                    <div class="text-center">
+                        <h2>Login</h2>
+                    </div>
+                    <form class="form-horizontal" action="myprofile.html">
                         <div class="form-group">
                             <label class="control-label col-sm-4" for="email">Email:</label>
                             <div class="col-sm-6">
@@ -86,14 +88,14 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-offset-4 col-sm-10">
+                            <div class="col-sm-offset-1 col-sm-10 text-left">
                                 <div class="checkbox">
                                     <label><input type="checkbox"> Remember me</label>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-sm-offset-4 col-sm-10">
+                            <div class="col-sm-offset-1 col-sm-10 text-left">
                                 <button type="submit" class="btn btn-default">Submit</button>
                             </div>
                         </div>
@@ -121,7 +123,7 @@
                     <img src="img/right-black-arrow.png" alt="" class=" img-responsive">
                 </div>
                 <div class="col-sm-1 col-sm-offset-1">
-                    <img src="img/envelope.png" alt="" class=" img-responsive">
+                    <img src="img/envelope.png" alt="" class="img-responsive">
                     <h2>CHAT!</h2>
                 </div>
             </div>
@@ -129,33 +131,47 @@
             <!-- Seccion TEAM, contiene imagenes de cada uno y descripcion -->
             <div class="text-center" id="team">
                 <h1>Team</h1>
-                <div class="team">
-                    <div>
-                        <img class="" src="img/avatar.png">
+                <div class="team col-sm-12">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="img/avatar.png">
                         <h2>Antonio</h2>
+                        <h4>Email: aaaaa@aaaaa.com</h4>
+                        <h4>Phone: +34 231 23 12 23</h4>
                     </div>
-                    <div>
-                        <img class="" src="img/avatar.png">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="img/avatar.png">
                         <h2>Javier</h2>
+                        <h4>Email: aaaaa@aaaaa.com</h4>
+                        <h4>Phone: +34 231 23 12 23</h4>
                     </div>
-                    <div>
-                        <img class="" src="img/avatar.png">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="img/avatar.png">
                         <h2>Oliver</h2>
+                        <h4>Email: aaaaa@aaaaa.com</h4>
+                        <h4>Phone: +34 231 23 12 23</h4>
                     </div>
-                    <div>
-                        <img class="" src="img/avatar.png">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="img/avatar.png">
                         <h2>Raúl</h2>
+                        <h4>Email: aaaaa@aaaaa.com</h4>
+                        <h4>Phone: +34 231 23 12 23</h4>
                     </div>
                 </div>
             </div>
 
             <!-- Seccion meetings, contiene una imagen y una descripcion de los meetings -->
             <div class="text-center" id="meetings">
-                <h1>Meetings</h1></br>
-                <p> Do you want to put into practice the language you are learning? Access our "meetings" in which we inform you of the next scheduled meetings, find out when and where will take place. These meetings are free and usually organized by our
+                <div class="col-sm-12">
+                    <h1>Meetings</h1>
+                </div>
+                <div class="col-sm-6 col-sm-offset-1">
+                    <p> Do you want to put into practice the language you are learning? Access our "meetings" in which we inform you of the next scheduled meetings, find out when and where will take place. These meetings are free and usually organized by our
                     users or people you trust. Don't wait any longer! Look for the nearest and go!
                 </p>
-                <img src="img/caf.jpg" alt="cafeteria">
+                </div>
+                <div class="col-sm-4 col-sm-offset-1">
+                     <img src="img/caf.jpg" class="img-responsive img-circle" alt="cafeteria">   
+                </div>            
             </div>
 
             <!-- Seccion Contact, contiene un formulario de contacto -->
