--- a/meetings.html
+++ b/meetings.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!https://www.w3schools.com/bootstrap/bootstrap_media_objects.asp>
     <title>MeetLanguages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,11 +8,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>
-    $(document).ready(function(){
-        $('[data-toggle="popover"]').popover(); 
-    });
-    </script>
 
 
   </head>
@@ -49,22 +43,67 @@
       </div>
     </nav>
 
+    <!-- Contenido principal -->
     <div class="container-fluid text-center" id="form">
       <div class="col-sm-6 col-sm-offset-2 text-left well">
-        <div>
-          <div class="media">
-            <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">  
-            </div>
-            <div class="media-body">
-              <h4 class="media-heading">Left-aligned</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="text-center">
+          <h3>Meetings</h3>
+          <hr>
+
+          <div class="panel panel-info text-left">
+            <div class="panel-heading">Meet at Flor de America in Segovia (Spain)</div>
+            <div class="panel-body">
+              <div>
+                <p>Me and some school partners have met with Erasmus students...</p> <!--from England to exchange the language.</p>
+                <p>Every persons that wants to come are invited.</p>
+                <p>We have met on Sunday morning, 23 of April at 12:00</p>-->
+
+              </div>
+              <div class="text-right">
+                <a href="meeting.html"><button type="button" class="btn btn-warning">Meeting</button></a>
+              </div>
             </div>
           </div>
-        <hr>
+          <div class="panel panel-info text-left">
+            <div class="panel-heading">Meet at Flor de America in Segovia (Spain)</div>
+            <div class="panel-body">
+              <div>
+                <p>Me and some school partners have met with Erasmus students...</p> <!--from England to exchange the language.</p>
+                <p>Every persons that wants to come are invited.</p>
+                <p>We have met on Sunday morning, 23 of April at 12:00</p>-->
+
+              </div>
+              <div class="text-right">
+                <a href="meeting.html"><button type="button" class="btn btn-warning">Meeting</button></a>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-info text-left">
+            <div class="panel-heading">Meet at Flor de America in Segovia (Spain)</div>
+            <div class="panel-body">
+              <div>
+                <p>Me and some school partners have met with Erasmus students...</p> <!--from England to exchange the language.</p>
+                <p>Every persons that wants to come are invited.</p>
+                <p>We have met on Sunday morning, 23 of April at 12:00</p>-->
+
+              </div>
+              <div class="text-right">
+                <a href="meeting.html"><button type="button" class="btn btn-warning">Meeting</button></a>
+              </div>
+            </div>
+          </div>
+          <div class="text-center">
+            <a href="create-meeting.html"><button type="button" class="btn btn-primary" >
+              	<span class="glyphicon glyphicon glyphicon-plus"></span>
+                Add meeting
+            </button></a>
+          </div>
         </div>
       </div>
-    
+
+
+
+
 
 
 
@@ -96,7 +135,7 @@
         </div>
           <div id="searchPanel" class="well">
             <div class="form-group">
-                
+
                   <h4><span class="glyphicon glyphicon-search"></span> Search:</h4>
                   <hr>
                   <form action="">
@@ -112,15 +151,16 @@
 
 
       <div id="mySidenav" class="sidenav" >
-        <a href="#" id="facebook">Facebook</a>
-        <a href="#" id="twitter">Twitter</a>
-        <a href="#" id="linkedin">Linkedin</a>
-        <a href="#" id="github">Github</a>
+        <a href="#" id="facebook">Facebook <img src="img/social/facebook.png" alt="" class="imgSocial"></a>
+        <a href="#" id="twitter">Twitter <img src="img/social/twitter.png" alt="" class="imgSocial"></a>
+        <a href="#" id="linkedin">Linkedin <img src="img/social/linkedin.png" alt="" class="imgSocial"></a>
+        <a href="#" id="github">Github <img src="img/social/git.png" alt="" class="imgSocial"></a>
       </div>
 
 
-  <footer class="container-fluid text-center">
-    <p>Footer Text</p>
-  </footer>
+      <!-- Comiendo del FOOTER -->
+      <footer class="container-fluid text-center">
+          <p>© 2017 M e e t L a n g u a g e s</p>
+      </footer
 </body>
 </html>
