--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -24,7 +24,7 @@
                     <div class="text-center">
                         <h2>Register</h2>
                     </div>
-                    <form class="form-horizontal" action="myprofile.html">
+                    <form class="form-horizontal" action="edit-profile.html">
                         <div class="form-group">
                             <label class="control-label col-sm-5" for="name">Name:</label>
                             <div class="col-sm-6">
@@ -74,7 +74,7 @@
                     <div class="text-center">
                         <h2>Login</h2>
                     </div>
-                    <form class="form-horizontal" action="myprofile.html">
+                    <form class="form-horizontal" action="edit-profile.html">
                         <div class="form-group">
                             <label class="control-label col-sm-4" for="email">Email:</label>
                             <div class="col-sm-6">
@@ -170,8 +170,8 @@
                 </p>
                 </div>
                 <div class="col-sm-4 col-sm-offset-1">
-                     <img src="img/caf.jpg" class="img-responsive img-circle" alt="cafeteria">   
-                </div>            
+                     <img src="img/caf.jpg" class="img-responsive img-circle" alt="cafeteria">
+                </div>
             </div>
 
             <!-- Seccion Contact, contiene un formulario de contacto -->
