Modificacion members.html

--- a/members.html
+++ b/members.html
@@ -57,8 +57,38 @@
               <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">  
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Left-aligned</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
+              <p>Idioma nativo: Español</p>
+              <p>Idiomas que quiero aprender: inglés, alemán</p>
+              <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        <hr>
+        </div>
+        <div>
+          <div class="media">
+            <div class="media-left">
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">  
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
+              <p>Idioma nativo: Español</p>
+              <p>Idiomas que quiero aprender: inglés, alemán</p>
+              <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        <hr>
+        </div>
+        <div>
+          <div class="media">
+            <div class="media-left">
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">  
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
+              <p>Idioma nativo: Español</p>
+              <p>Idiomas que quiero aprender: inglés, alemán</p>
+              <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
         <hr>
