Falta de ortografia

--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,7 @@
             <div class="media-body">
               <h4 class="media-heading"><a href="profile.html">What I like:</a></h4>
               <p>Pop music</p>
-              <p>Bascketball</p>
+              <p>Basketball</p>
               <p>Texas hold'em</p>
               <p>Computer science</p>
             </div>
