--- a/search.html
+++ b/search.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!https://www.w3schools.com/bootstrap/bootstrap_media_objects.asp>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <!--https://www.w3schools.com/bootstrap/bootstrap_media_objects.asp-->
     <title>MeetLanguages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="search_files/style.css">
+    <link rel="stylesheet" href="search_files/bootstrap.css">
+    <script src="search_files/jquery.js"></script>
+    <script src="search_files/bootstrap.js"></script>
     <script>
     $(document).ready(function(){
         $('[data-toggle="popover"]').popover(); 
@@ -23,7 +23,7 @@
         <a href="#">
         <div class="navbar-left">
           <span class="navbar-brand brand-name">
-          <img class="img-responsive2" src="img/mlg.png">
+          <img class="img-responsive2" src="search_files/mlg.png">
           <h4 style="color: #ec7820">MEETLANGUAGES</h4>
           </span>
         </div>
@@ -54,11 +54,24 @@
         <div>
           <div class="media">
             <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">  
+                
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Left-aligned</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3>Search</h3>
+              <hr>
+               <form>
+  <div class="form-group">
+    <label for="term">Search terms:</label>
+    <input class="form-control" id="term">
+  </div>
+  <div class="checkbox">
+    
+    <label><input type="checkbox"> Members</label>
+    <label><input type="checkbox"> Groups</label>
+
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
             </div>
           </div>
         <hr>
@@ -74,8 +87,8 @@
         <div id="profilePanel" class="well">
           <h3>Hello user!</h3>
           <hr>
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive3" id="avatar">
-          <div class="list-group text-left" >
+          <img src="search_files/avatar.png" alt="avatar_meetlanguages" class="img-responsive3" id="avatar">
+          <div class="list-group text-left">
             <!--<a href="#" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Change avatar</a>-->
             <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> Edit profile</a>
             <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
@@ -87,12 +100,12 @@
         <div id="searchPanel" class="well">
           <h3>Friends online</h3>
           <hr>
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
-          <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <img src="search_files/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <img src="search_files/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <img src="search_files/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <img src="search_files/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <img src="search_files/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
+          <img src="search_files/avatar.png" alt="avatar_meetlanguages" class="img-responsive4" id="avatar">
         </div>
           <div id="searchPanel" class="well">
             <div class="form-group">
@@ -100,9 +113,9 @@
                   <h4><span class="glyphicon glyphicon-search"></span> Search:</h4>
                   <hr>
                   <form action="">
-                  <input type="text" name="searchAds" class="col-xs-12">
-                  </br>
-                  </br>
+                  <input name="searchAds" class="col-xs-12" type="text">
+                  <br>
+                  <br>
                   <button type="submit" class="btn btn-default">Submit</button>
                 </form>
               </div>
@@ -111,7 +124,7 @@
     </div>
 
 
-      <div id="mySidenav" class="sidenav" >
+      <div id="mySidenav" class="sidenav">
         <a href="#" id="facebook">Facebook</a>
         <a href="#" id="twitter">Twitter</a>
         <a href="#" id="linkedin">Linkedin</a>
@@ -122,5 +135,6 @@
   <footer class="container-fluid text-center">
     <p>Footer Text</p>
   </footer>
-</body>
-</html>
+
+
+</body></html>
