Mod profile. Footers

--- a/profile.html
+++ b/profile.html
@@ -57,7 +57,7 @@
               <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido"="popover" data-content="sgsdfgsd" data-trigger="hover">  
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
+              <h4 class="media-heading">Nombre Apellido</h4>
               <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
@@ -66,27 +66,85 @@
         <div>
           <div class="media">
             <div class="media-body">
-              <h4 class="media-heading"><a href="profile.html">About me:</a></h4>
-              <p>Native language: Spanish</p>
-              <p>Language to learn: English</p>
-              <p>Country: Spainish</p>
-              <p>Gender: male</p>
-              <p>Age: 21</p>
+              <h2>About me:</h2>
+              <table class="table table-striped">
+                <tbody>
+                  <tr>
+                    <td>Birthday</td>
+                    <td>03/04/1990</td>
+                  </tr>
+                  <tr>
+                    <td>Sex</td>
+                    <td>Male</td>
+                  </tr>
+                  <tr>
+                    <td>Country</td>
+                    <td>Spain</td>
+                  </tr>
+                  <tr>
+                    <td>Native Language</td>
+                    <td>Spanish</td>
+                  </tr>
+                  <tr>
+                    <td>Language I want to learn</td>
+                    <td>German</td>
+                  </tr>
+                  <tr>
+                    <td>Skype</td>
+                    <td>asdasd@asd.com</td>
+                  </tr>
+                  <tr>
+                    <td>Occupation</td>
+                    <td>Student</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
-        <hr>
         </div>
         <div>
           <div class="media">
             <div class="media-body">
-              <h4 class="media-heading"><a href="profile.html">What I like:</a></h4>
-              <p>Pop music</p>
-              <p>Basketball</p>
-              <p>Texas hold'em</p>
-              <p>Computer science</p>
+              <h2>What I like:</h2>
+              <ul class="nav nav-tabs">
+                <li><a data-toggle="tab" href="#literature">Literature</a></li>
+                <li><a data-toggle="tab" href="#music">Music</a></li>
+                <li><a data-toggle="tab" href="#films">Films</a></li>
+                <li><a data-toggle="tab" href="#series">Series</a></li>
+                <li><a data-toggle="tab" href="#sports">Sports</a></li>
+                <li><a data-toggle="tab" href="#activities">Activities</a></li>
+              </ul>
+            
+              <div class="tab-content">
+                <div id="literature" class="tab-pane fade">
+                  <ul>
+                    <li>Tales</li>
+                    <li>Terror</li>
+                    <li>Comic</li>
+                  </ul>
+                </div>
+                <div id="music" class="tab-pane fade">
+                  <ul>
+                    <li>Pop</li>
+                    <li>Rap</li>
+                    <li>Rock</li>
+                  </ul>
+                </div>
+                <div id="films" class="tab-pane fade">
+                  <p>Drama, Animation, Thriller.</p>
+                </div>
+                <div id="series" class="tab-pane fade">
+                  <p>Braking bad, The Walking Dead, House</p>
+                </div>
+                <div id="sports" class="tab-pane fade">
+                  <p>Football, Basketball, Tennis</p>
+                </div>
+                <div id="activities" class="tab-pane fade">
+                  <p>Science, Sports, Astronomy</p>
+                </div>
+              </div>
             </div>
           </div>
-        <hr>
         </div>
       </div>
     
@@ -102,7 +160,7 @@
           <img src="img/avatar.png" alt="avatar_meetlanguages" class="img-responsive3" id="avatar">
           <div class="list-group text-left" >
             <!--<a href="#" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Change avatar</a>-->
-            <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> Edit profile</a>
+            <a href="edit-profile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> Edit profile</a>
             <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
             <a href="#" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
             <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
@@ -145,7 +203,7 @@
 
 
   <footer class="container-fluid text-center">
-    <p>Footer Text</p>
+    <p>© 2017 M e e t L a n g u a g e s</p>
   </footer>
 </body>
 </html>
