--- a/create-meeting.html
+++ b/create-meeting.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="form-group">
-              <label for="aboutMe" class="col-sm-2">Description:</label>
+              <label for="aboutMe" class="control-label col-sm-2">Description:</label>
               <div class="col-sm-10">
                 <textarea class="form-control noresize col-sm-10" rows="10" id="desciption"></textarea>
               </div>
