--- a/myfriends.html
+++ b/myfriends.html
@@ -9,13 +9,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>
-    $(document).ready(function(){
-        $('[data-toggle="popover"]').popover(); 
-    });
-    </script>
-
-
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -54,14 +47,62 @@
         <div>
           <div class="media">
             <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">  
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">  
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Left-aligned</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
+              <p>Idioma nativo: Español</p>
+              <p>Idiomas que quiero aprender: inglés, alemán</p>
+              <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="text-right">
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon glyphicon-send"></span>
+                  Send message
+              </button>
             </div>
           </div>
         <hr>
+        </div>
+        <div>
+          <div class="media">
+            <div class="media-left">
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">  
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
+              <p>Idioma nativo: Español</p>
+              <p>Idiomas que quiero aprender: inglés, alemán</p>
+              <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="text-right">
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <span class="glyphicon glyphicon glyphicon-send"></span>
+                  Send message
+              </button>
+            </div>
+          </div>
+        <hr>
+        </div>
+      </div>
+      <!-- Message -->
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Write a message</h4>
+            </div>
+            <div class="modal-body">
+              <form>
+                <textarea class="form-control" rows="5" id="comment"></textarea>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
+              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+          </div>
         </div>
       </div>
     
