--- a/mygroups.html
+++ b/mygroups.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>
     $(document).ready(function(){
-        $('[data-toggle="popover"]').popover(); 
+        $('[data-toggle="popover"]').popover();
     });
     </script>
 
@@ -53,18 +53,35 @@
       <div class="col-sm-6 col-sm-offset-2 text-left well">
         <div>
           <div class="media">
-            <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover">  
-            </div>
             <div class="media-body">
-              <h4 class="media-heading">Left-aligned</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+               <h3>Groups</h3>
+               <hr>
+              <div class="panel panel-info text-left">
+                 <div class="panel-heading">LudoSpain</div>
+                 <div class="panel-body">
+                   <div class="media">
+                   <div class="media-left"><img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido"></div>
+
+                   <div class ="media-body">
+                     <p>Join to play some boardgames while you learn Spanish!</p>
+                   </div>
+                   </div>
+                   <div class="text-right">
+                     <a href="group.html"><button type="button" class="btn btn-warning">Group page</button></a>
+                   </div>
+                 </div>
+               </div>
+               <div class="text-center">
+                 <a href="create-group.html"><button type="button" class="btn btn-primary">
+                     <span class="glyphicon glyphicon glyphicon-plus"></span>
+                     Add group
+                 </button></a>
+               </div>
             </div>
           </div>
-        <hr>
         </div>
       </div>
-    
+
 
 
 
@@ -96,7 +113,7 @@
         </div>
           <div id="searchPanel" class="well">
             <div class="form-group">
-                
+
                   <h4><span class="glyphicon glyphicon-search"></span> Search:</h4>
                   <hr>
                   <form action="">
