--- a/edit-profile.html
+++ b/edit-profile.html
@@ -168,6 +168,89 @@
           </div>
           <div class="form-group col-sm-offset-1 col-sm-10 well">
             <div>
+              <label for="literature">Music:</label>
+            </div>
+            <div class="col-sm-4">
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Rock">Rock</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Pop" checked>Pop</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Reggae">Reggae</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Ska" checked>Ska</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Latin">Latin</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Flamenco" checked>Flamenco</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Trap">Trap</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Trance" checked>Trance</label>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Classical">Classical</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Alternative">Alternative</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Blues">Blues</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Country" checked>Country</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Electronic">Electronic</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Hip Hop / Rap" checked>Hip Hop/Rap</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Cumbia">Cumbia</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Salsa" checked>Salsa</label>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Dance" checked>Dance</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Drum and Bass">Drum and Bass</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Dubstep">Dubstep</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Techno" checked>Techno</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Instrumental">Instrumental</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Jazz" checked>Jazz</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="R&B/Soul">R&B/Soul</label>
+              </div>
+              <div class="checkbox">
+                <label><input name="music" type="checkbox" value="Heavy" checked>Heavy</label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group col-sm-offset-1 col-sm-10 well">
+            <div>
               <label for="film" class="">Film:</label>
             </div>
             <div class="col-sm-4">
@@ -531,8 +614,9 @@
       </div>
 
 
-  <footer class="container-fluid text-center">
-    <p>© 2017 M e e t L a n g u a g e s</p>
-  </footer>
+      <!-- Comiendo del FOOTER -->
+      <footer class="container-fluid text-center">
+          <p>© 2017 M e e t L a n g u a g e s</p>
+      </footer
 </body>
 </html>
