--- a/group.html
+++ b/group.html
@@ -66,12 +66,12 @@
                           <div class="panel-heading">Members</div>
                           <div class="panel-body">
                             <div>
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido">
-                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="sgsdfgsd" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
+                            <img src="img/avatar.png" alt="avatar_meetlanguages" class="imp-responsive4" id="avatar" title="" data-toggle="popover" data-content="Language I want to learn: English Language: Spanish" data-trigger="hover" data-original-title="Nombre Apellido">
                             </div>
                           </div>
                         </div>
